# napari-plugin-test

./: LICENSE  README.md  setup.cfg  tox.ini
.github/workflows/: deploy.yml  test_and_deploy.yml
src/napari_plugin_test/: __init__.py  napari.yaml
src/napari_plugin_test/_tests/: test_sample_data.py  test_widget.py
