[metadata]
name = napari-plugin-test
version = 0.0.4
author = Uwe Schmidt
author_email = mail@uweschmidt.org
url = https://github.com/uschmidt83/napari-plugin-test
license = BSD-3-Clause
description = A test plugin
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Framework :: napari
    Topic :: Software Development :: Testing
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Operating System :: OS Independent
    License :: OSI Approved :: BSD License
project_urls =
    Bug Tracker = https://github.com/uschmidt83/napari-plugin-test/issues
    Documentation = https://github.com/uschmidt83/napari-plugin-test#README.md
    Source Code = https://github.com/uschmidt83/napari-plugin-test
    User Support = https://github.com/uschmidt83/napari-plugin-test/issues

[options]
packages = find:
include_package_data = True
python_requires = >=3.8
package_dir =
    =src

# add your package requirements here
install_requires =
    numpy
    magicgui
    qtpy


[options.extras_require]
testing =
    pytest  # https://docs.pytest.org/en/latest/contents.html
    pytest-cov  # https://pytest-cov.readthedocs.io/en/latest/
    pytest-qt  # https://pytest-qt.readthedocs.io/en/latest/
    napari
    pyqt5


[options.packages.find]
where = src

[options.package_data]
* = *.yaml

[options.entry_points]
napari.manifest =
    napari-plugin-test = napari_plugin_test:napari.yaml
